Update issue templates

--- a/.github/ISSUE_TEMPLATE/작업-사항-제목.md
+++ b/.github/ISSUE_TEMPLATE/작업-사항-제목.md
@@ -1,7 +1,7 @@
 ---
-name: "[Feature☑️] 작업 사항 제목"
+name: 작업 사항 제목
 about: 기능 작업 사항을 입력해주세요.
-title: "[Feature☑️] 작업 사항 제목"
+title: 작업 사항 제목
 labels: ''
 assignees: ''
 
@@ -10,3 +10,5 @@ assignees: ''
 ## 📝To-do
 - [ ] 리스트 1
 - [ ] 리스트 2
+
+## 🌿설명
